--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     <div id="container">
        
       
-      <div class="content content1">content1</div>
-      <div class="content content2">content2</div>
+      <div class="content content1"></div>
+      <div class="content content2"></div>
       <div class="content content3"><p>The persons can be identified as their names are shown: Dionysos, Nike and a maenad. Dionysos stands on one of two panthers pulling a wagon with spoked wheels. He has a nimbus. In his right hand he holds a thyrsos. He wears a long tunic . Next to him stands Nike, who handles the panthers. To the right a maenad dances with a cymbal.</p></div>
       <div class="content content4"><p>There is a mosaic with a central water god and two nymphs on either side. I have no further information. This is the water god.</p></div>
       <div class="content content5"><p>The Zeugma site explains that the man Methiokos loved the girl Parthenope, who loved him too, but had made a vow to keep her virginity. She fled to Italy, devoting herself to the winegod Dionysos. However, Aphrodite could not accept she refused physical love, and transformed her into the demon Siren (woman's head, bird's body).</p></div>
-      <div class="content content8">content8</div>
-      <div class="content content10">content10</div>
+      <div class="content content8"></div>
+      <div class="content content10"></div>
       <div class="content content11"><p>The "Gypsy Girl" is in Zeugma Mosaic Museum.</p></div>
-      <div class="content content12">content12</div>
+      <div class="content content12"></div>
       <div class="content content14"><p> In Hesiod's Theogony, Oceanus was the son of Uranus (Heaven) and Gaea (Earth), the husband of the Titan Tethys, and father of 3,000 stream spirits and 3,000 ocean nymphs. In Homer's works he was the origin of the gods. As a common noun the word received almost the modern sense of ocean. Hence in details all sorts of "sea life" appear.</p></div>
     </div>
     <script src="app.js"></script>
